# rstmdb-studio

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  studio.yaml
.github/workflows/: ci.yml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/components/guard-builder/: ConditionGroupComponent.tsx  ConditionRow.tsx  GuardBuilder.tsx  GuardBuilderModal.tsx  OperatorSelect.tsx  ValueInput.tsx  index.ts  types.ts
frontend/src/components/machine-builder/: MachineBuilder.tsx  index.ts
frontend/src/components/machine-builder/canvas/: BuilderCanvas.tsx
frontend/src/components/machine-builder/edges/: TransitionEdge.tsx  edgeTypes.ts
frontend/src/components/machine-builder/hooks/: useMachineBuilder.ts
frontend/src/components/machine-builder/nodes/: StateNode.tsx  nodeTypes.ts
frontend/src/components/machine-builder/panels/: PropertiesPanel.tsx  StateProperties.tsx  (+2 more)
frontend/src/lib/: api.ts
frontend/src/lib/machine-builder/: conversion.ts  index.ts  layout.ts  types.ts
frontend/src/pages/: CreateMachinePage.tsx  DashboardPage.tsx  InstanceDetailPage.tsx  InstancesPage.tsx  LoginPage.tsx  MachineDetailPage.tsx  MachinesPage.tsx  WalPage.tsx
src/: config.rs  constants.rs  error.rs  json_ext.rs  main.rs  static_files.rs
src/api/: auth.rs  instances.rs  machines.rs  mod.rs  server.rs  wal.rs
src/auth/: mod.rs  password.rs  store.rs
src/rstmdb/: client.rs  mod.rs
src/validation/: mod.rs
