[package]
name = "rstmdb-studio"
version = "0.1.0"
edition = "2021"
description = "Web UI for managing rstmdb instances"
license = "MIT"
repository = "https://github.com/rstmdb/rstmdb-studio"

[[bin]]
name = "rstmdb-studio"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Password hashing
argon2 = "0.5"

# Session management
tower-sessions = "0.13"

# Configuration
figment = { version = "0.10", features = ["yaml", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
shellexpand = "3"
time = "0.3.36"  # Pin to version compatible with Rust 1.85

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# rstmdb client
rstmdb-client = "0.1.1"
rstmdb-protocol = "0.1.1"

# Embedded frontend assets
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
